--- a/css/skills.css
+++ b/css/skills.css
@@ -33,6 +33,8 @@
   width: 80%;
   height: 100%;
 
+  margin-bottom: 32px;
+
   transition: 0.3s ease;
 }
 
@@ -44,7 +46,8 @@
 .box-title {
   font-size: 24px;
   font-weight: 700;
-  margin-bottom: 16px;
+  margin-bottom: 32px;
+  text-align: center;
   background: linear-gradient(90deg, #d946ef 0%, #a855f7 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
