--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -10,7 +10,7 @@
 .section-about {
   background-color: #111111;
   color: #ddd;
-  height: 70vh;
+  height: clamp(auto, 80vh, 800px);
   min-height: 700px;
 }
 
@@ -155,4 +155,12 @@
 .aboutme-skill-text {
   font-size: 16px;
   font-weight: 700;
+}
+
+.aboutme-img {
+  width: 180px;
+  height: 180px;
+  border-radius: 50%;
+  margin-bottom: 24px;
+  object-fit: cover;
 }
